Refactor the ProcessExecutor interface Javadoc.
Define the RuntimeProcessExecutor class in org.cp.elements.process.support using the java.lang.Runtime API for configuring and exeucting OS programs.